Updating stream style serialization PR