@@ -50,6 +50,8 @@
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
             --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=com.fasterxml.jackson.databind
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=com.fasterxml.jackson.databind
         </javaModulesSurefireArgLine>
     </properties>
 
